# CS356-Group-3-Backend

./: Dockerfile  README.md  openapi.yaml  pyproject.toml  requirements.txt
app/: main.py
app/auth/: config.py  dependencies.py
app/config/: email_conf.py  settings.py
app/database/: backend.db  database.py  set_up_database.py
app/database/tables/: encoder.py  encoders.py  experiments.py  network.py  reset_tokens.py  results.py  user.py  videos.py
app/models/: encoder.py  encoder_input.py  encoding_parameters.py  error.py  experiment.py  experiment_input.py  experiment_sequence.py  experiment_status.py  info.py  login_request.py  login_response.py  network.py  network_conditions.py  network_input.py  user.py  user_input.py  video.py
app/routers/: auth.py  encoders.py  experiments.py  networks.py  results.py  users.py  videos.py
app/services/: auth.py  encoders.py  experiments.py  networks.py  results.py  users.py  videos.py
app/services/utility/: email.py  files.py  video_file_handler.py
tests/: conftest.py  test_auth_api.py  test_encoders_api.py  test_experiments_api.py  test_networks_api.py  test_results_api.py  test_users_api.py  test_videos_api.py
tests/utility/: validation.py  video_file_handler_test.py
