[tool.poetry]
name = "CS356-Group-3-Backend"
version = "0.1.0"
description = "A FastAPI project using Poetry"
authors = ["Rory Sneddon <rory.sneddon.2022@uni.strath.ac.uk>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
