[tool.poetry]
name = "CS356-Group-3-Backend"
version = "0.1.0"
description = "A FastAPI project using Poetry"
authors = ["Rory Sneddon <rory.sneddon.2022@uni.strath.ac.uk>", "Angus Henderson <angushenderson04@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pyyaml = "^6.0.2"
pydantic = {extras = ["email"], version = "^2.11.4"}
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"
aiomysql = "^0.2.0"
typing-extensions = "^4.13.2"
opencv-python = "^4.11.0.86"
greenlet = "^3.2.2"
pydantic-settings = "^2.9.1"
jwt = "^1.3.1"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
python-jose = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true
